--- a/mydevskills/main_app/templates/base.html
+++ b/mydevskills/main_app/templates/base.html
@@ -23,7 +23,7 @@
                     <li> | </li>
                     <li><a href="{% url 'profile' user.username %}">Hello, {{ user.username }}!</a></li>
                     <li> | </li>
-                    <li><a href="/myskills">My Skills</a></li>
+                    <li><a href="/skills">My Skills</a></li>
                     <li><a href="/addskill">Add Skill</a></li>
                     <li><a href="{% url 'logout' %}">Logout</a></li>
                     {% else %}
