--- a/mydevskills/main_app/templates/skills/detail.html
+++ b/mydevskills/main_app/templates/skills/detail.html
@@ -5,12 +5,15 @@
 
 <table>
     <thead>
-        <th>Description</th>
-        <th>Skill Level</th>
+        <tr>
+            <th>Skill Name</th>
+            <th>Description</th>
+            <th>Skill Level</th>
+        </tr>
     </thead>
     <tbody>
         <tr>
-            <td>{{skill.name}}</td>
+            <td>{{skill.skill}}</td>
             <td>{{skill.description}}</td>
             <td>{{skill.get_skill_level_display}}</td>
         </tr>
